Bug 1172012 - Fixes a copy & paste error in nsCSSValue.cpp. r=heycam